--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
 == Purchase
 
-Purchase is the simplest form of content creation. You simply buy something and tell the world about your values and what products are valuabled
+Purchase is the simplest form of content creation. You simply buy something and tell the world about your values and what products are valuable
+
+The ultimate goal is to reward creators for creating quality content. The person who shares their purchase becomes a nexus of information connecting potential buyers to the product. 
